Complete the exchange form and add help text with link to currency codes

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
   <div class="container">
     <div class="row">
       <div class="col-8 mx-auto">
-        <h2 class="mb-4 text-center">Get Current Exchange Rates</h2>
+        <h2 class="text-center">Get Current Exchange Rates</h2>
+        <p class="text-center mb-4">Enter 3-letter currency codes. A list can be found <a href="https://en.wikipedia.org/wiki/ISO_4217#Active_codes" target="_blank">here</a>.</p>
         {% block content %}{% endblock %}
       </div>
     </div>
