--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,15 @@
 <form id="currency-form" action="/" method="POST">
   <div class="form-group">
     <label for="convert-from">Convert From</label>
-    <input type="text" class="form-control" name="from" id="convert-from">
+    <input type="text" class="form-control" name="from" id="convert-from" placeholder="USD" maxlength="3" required>
+  </div>
+  <div class="form-group">
+    <label for="convert-to">Convert To</label>
+    <input type="text" class="form-control" name="to" id="convert-to" placeholder="EUR" maxlength="3" required>
+  </div>
+  <div class="form-group">
+    <label for="amount">Amount</label>
+    <input type="text" class="form-control" name="amount" id="amount" placeholder="1.00" required>
   </div>
   <button type="submit" class="btn btn-info">Convert</button>
 </form>
