Add rate template and post routes that redirect between the two pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<p class="text-center mb-4">Enter 3-letter currency codes. A list can be found <a href="https://en.wikipedia.org/wiki/ISO_4217#Active_codes" target="_blank">here</a>.</p>
 <form id="currency-form" action="/" method="POST">
   <div class="form-group">
     <label for="convert-from">Convert From</label>
