--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,22 @@
 
 {% block content %}
 <p class="text-center mb-4">Enter 3-letter currency codes. A list can be found <a href="https://en.wikipedia.org/wiki/ISO_4217#Active_codes" target="_blank">here</a>.</p>
-<form id="currency-form" action="/" method="POST">
+<form class="mb-3" id="currency-form" action="/" method="POST">
   <div class="form-group">
     <label for="convert-from">Convert From</label>
-    <input type="text" class="form-control" name="from" id="convert-from" placeholder="USD" maxlength="3" required>
+    <input type="text" class="form-control" name="from-code" id="convert-from" placeholder="USD" maxlength="3" required>
   </div>
   <div class="form-group">
     <label for="convert-to">Convert To</label>
-    <input type="text" class="form-control" name="to" id="convert-to" placeholder="EUR" maxlength="3" required>
+    <input type="text" class="form-control" name="to-code" id="convert-to" placeholder="EUR" maxlength="3" required>
   </div>
   <div class="form-group">
     <label for="amount">Amount</label>
-    <input type="text" class="form-control" name="amount" id="amount" placeholder="1.00" required>
+    <input type="number" class="form-control" name="amount" id="amount" placeholder="1.00" required>
   </div>
   <button type="submit" class="btn btn-info">Convert</button>
 </form>
+{% for msg in get_flashed_messages() %}
+  <p>{{ msg }}</p>
+{% endfor %}
 {% endblock %}
