--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   </div>
   <div class="form-group">
     <label for="amount">Amount</label>
-    <input type="number" class="form-control" name="amount" id="amount" placeholder="1.00" required>
+    <input type="text" class="form-control" name="amount" id="amount" placeholder="1.00" required>
   </div>
   <button type="submit" class="btn btn-info">Convert</button>
 </form>
