--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-8 mx-auto">
-        <h2 class="text-center">Get Current Exchange Rates</h2>
+        <h2 class="text-center">Currency Converter</h2>
         {% block content %}{% endblock %}
       </div>
     </div>
