--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p class="text-center mb-4">Enter 3-letter currency codes. A list can be found <a href="https://en.wikipedia.org/wiki/ISO_4217#Active_codes" target="_blank">here</a>.</p>
-<form class="mb-3" id="currency-form" action="/" method="POST">
-  <div class="form-group">
-    <label for="convert-from">Convert From</label>
-    <input type="text" class="form-control" name="from-code" id="convert-from" placeholder="USD" maxlength="3" required>
+<p class="text-center mb-4">Enter 3-letter currency codes and amount for conversion. 
+<br>A list of currency codes can be found <a href="https://en.wikipedia.org/wiki/ISO_4217#Active_codes" target="_blank">here</a>.</p>
+<div class="row">
+  <div class="col-5 mx-auto text-center">
+    <form class="mb-3" id="currency-form" action="/" method="POST">
+      <div class="form-group">
+        <label for="convert-from">Convert From</label>
+        <input type="text" class="form-control text-center" name="from-code" id="convert-from" placeholder="USD" maxlength="3" required>
+      </div>
+      <div class="form-group">
+        <label for="convert-to">Convert To</label>
+        <input type="text" class="form-control text-center" name="to-code" id="convert-to" placeholder="EUR" maxlength="3" required>
+      </div>
+      <div class="form-group">
+        <label for="amount">Amount</label>
+        <input type="text" class="form-control text-center" name="amount" id="amount" placeholder="1.00" required>
+      </div>
+      <button type="submit" class="btn btn-info">Convert</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="convert-to">Convert To</label>
-    <input type="text" class="form-control" name="to-code" id="convert-to" placeholder="EUR" maxlength="3" required>
-  </div>
-  <div class="form-group">
-    <label for="amount">Amount</label>
-    <input type="text" class="form-control" name="amount" id="amount" placeholder="1.00" required>
-  </div>
-  <button type="submit" class="btn btn-info">Convert</button>
-</form>
+</div>
 {% for msg in get_flashed_messages() %}
   <div class="alert alert-danger text-center" role="alert">
     {{ msg }}
